ff-27: Country search works with contain now instead of starts with, implemented delete method